新增文件管理模块

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -7364,3 +7364,11 @@ body.skin-3 {
     border-color: #cccccc!important;
 }
 
+.input_width80{
+    width: 80% !important;
+}
+
+.input_width100{
+    width: 100% !important;
+}
+
