--- a/src/main/resources/templates/include.html
+++ b/src/main/resources/templates/include.html
@@ -23,6 +23,8 @@
 	<link href="/css/plugins/chosen/chosen.css" rel="stylesheet">
 	<link href="/css/style.css?v=4.1.0" th:href="@{/css/style.css?v=4.1.0}"
 		  rel="stylesheet">
+	<link href="/js/plugins/bootstrap-select/css/bootstrap-select.css"
+		  rel="stylesheet">
 </head>
 <div th:fragment="footer">
 	<script src="/js/jquery.min.js?v=2.1.4"></script>
@@ -33,6 +35,7 @@
 			src="/js/plugins/bootstrap-table/locale/bootstrap-table-zh-CN.min.js"></script>
 	<script src="/js/plugins/validate/jquery.validate.min.js"></script>
 	<script src="/js/plugins/validate/messages_zh.min.js"></script>
+	<script src="/js/common.js"></script>
 	<script src="/js/plugins/jsTree/jstree.min.js"></script>
 	<script src="/js/plugins/jqTreeGrid/jquery.treegrid.min.js"></script>
 	<script src="/js/plugins/jqTreeGrid/jquery.treegrid.extension.js"></script>
@@ -43,4 +46,5 @@
 	<!--summernote-->
 	<script src="/js/plugins/summernote/summernote.js"></script>
 	<script src="/js/plugins/summernote/summernote-zh-CN.min.js"></script>
+	<script src="/js/plugins/bootstrap-select/js/bootstrap-select.js"></script>
 </div>
