--- a/src/main/resources/templates/project/wdb/add.html
+++ b/src/main/resources/templates/project/wdb/add.html
@@ -2,6 +2,7 @@
 <html>
 <meta charset="utf-8">
 <head th:include="include :: header"></head>
+<link href="/css/layui.css" rel="stylesheet">
 <body class="gray-bg">
 	<div class="wrapper wrapper-content ">
 		<div class="row">
@@ -9,43 +10,38 @@
 				<div class="ibox float-e-margins">
 					<div class="ibox-content">
 						<form class="form-horizontal m-t" id="signupForm">
-                                                                							                                                                <div class="form-group">	
-								<label class="col-sm-3 control-label">项目id：</label>
+							<div class="form-group">
+								<label class="col-sm-3 control-label">类型：</label>
 								<div class="col-sm-8">
-									<input id="xmid" name="xmid" class="form-control" type="text">
+									<select  name="type" id="type" class="selectpicker input_width100" placeholder="类型">
+									</select>
 								</div>
 							</div>
-														                                                                <div class="form-group">	
-								<label class="col-sm-3 control-label">项目名称：</label>
+							<div class="form-group">
+								<label class="col-sm-3 control-label">项目：</label>
+								<div class="col-sm-8">
+									<select  name="type" id="type" class="selectpicker input_width100" placeholder="类型">
+									</select>
+								</div>
+							</div>
+							<div class="form-group">
+								<label class="col-sm-3 control-label">文件名称：</label>
 								<div class="col-sm-8">
 									<input id="xmmc" name="xmmc" class="form-control" type="text">
 								</div>
 							</div>
-														                                                                <div class="form-group">	
-								<label class="col-sm-3 control-label">类型编号：</label>
+							<div class="form-group">
+								<label class="col-sm-3 control-label">
+									<button type="button" class="layui-btn" id="test1" style="width: 100%;">
+										<i class="fa fa-cloud"></i>上传文件
+									</button>
+								</label>
 								<div class="col-sm-8">
-									<input id="type" name="type" class="form-control" type="text">
+									<input id="xmmc" name="xmmc" class="form-control" type="text">
 								</div>
 							</div>
-														                                                                <div class="form-group">	
-								<label class="col-sm-3 control-label">类型名称：</label>
-								<div class="col-sm-8">
-									<input id="typeName" name="typeName" class="form-control" type="text">
-								</div>
-							</div>
-														                                                                <div class="form-group">	
-								<label class="col-sm-3 control-label">文件名称：</label>
-								<div class="col-sm-8">
-									<input id="fileName" name="fileName" class="form-control" type="text">
-								</div>
-							</div>
-														                                                                <div class="form-group">	
-								<label class="col-sm-3 control-label">废除标志 1正常0 废除：</label>
-								<div class="col-sm-8">
-									<input id="fcbz" name="fcbz" class="form-control" type="text">
-								</div>
-							</div>
-																					<div class="form-group">
+
+							<div class="form-group">
 								<div class="col-sm-8 col-sm-offset-3">
 									<button type="submit" class="btn btn-primary">提交</button>
 								</div>
@@ -57,6 +53,7 @@
 	</div>
 	</div>
 	<div th:include="include::footer"></div>
+	<script src="/js/layui.js"></script>
 	<script type="text/javascript" src="/js/appjs/project/wdb/add.js">
 	</script>
 </body>
