--- a/src/main/resources/templates/project/wdb/wdb.html
+++ b/src/main/resources/templates/project/wdb/wdb.html
@@ -8,22 +8,31 @@
 			<div class="ibox">
 				<div class="ibox-body">
 					<div class="fixed-table-toolbar">
-						<div class="columns pull-left">
+						<div class="col-xs-10">
+							<div class="form-group col-sm-4">
+								类型：
+							<select  name="type" id="type" class="selectpicker input_width80" placeholder="类型">
+							</select>
+							</div>
+
+							<div class="form-group col-sm-4">
+								项目名称：<input class="form-control inline input_width80"   id="xmmc" name="xmmc" placeholder="项目名称" type="text">
+							</div>
+							<div class="form-group col-sm-4">
+								文件名：<input class="form-control inline input_width80"   id="fileName" name="fileName" placeholder="文件名称" type="text">
+							</div>
+						</div>
+						<div class="col-xs-2">
+							<button class="btn btn-success" onclick="reLoad()">查询</button>
 							<button shiro:hasPermission="project:wdb:add" type="button" class="btn  btn-primary" onclick="add()">
 								<i class="fa fa-plus" aria-hidden="true"></i>添加
 							</button>
 							<button shiro:hasPermission="project:wdb:batchRemove" type="button" class="btn  btn-danger"
-								onclick="batchRemove()">
+									onclick="batchRemove()">
 								<i class="fa fa-trash" aria-hidden="true"></i>删除
 							</button>
 						</div>
-						<div class="columns pull-right">
-							<button class="btn btn-success" onclick="reLoad()">查询</button>
-						</div>
-						<div class="columns pull-right col-md-2 nopadding">
-							<input id="searchName" type="text" class="form-control"
-								placeholder="">
-						</div>
+
 					</div>
 					<table id="exampleTable" data-mobile-responsive="true">
 					</table>
