--- a/src/main/resources/templates/sys/user/add.html
+++ b/src/main/resources/templates/sys/user/add.html
@@ -47,6 +47,13 @@
 								</div>
 							</div>
 							<div class="form-group">
+								<label class="col-sm-3 control-label">手机号：</label>
+								<div class="col-sm-8">
+									<input id="mobile" name="mobile" class="form-control"
+										   type="tel">
+								</div>
+							</div>
+							<div class="form-group">
                                 <label class="col-sm-3 control-label">排序：</label>
                                 <div class="col-sm-8">
                                     <input id="orderNum" name="orderNum" class="form-control"
