--- a/src/main/resources/templates/project/wdb/wdb.html
+++ b/src/main/resources/templates/project/wdb/wdb.html
@@ -12,6 +12,7 @@
 							<div class="form-group col-sm-4">
 								类型：
 							<select  name="type" id="type" class="selectpicker input_width80" placeholder="类型">
+									<option value="">请选择</option>
 							</select>
 							</div>
 
