--- a/src/main/resources/templates/project/gsgg/add.html
+++ b/src/main/resources/templates/project/gsgg/add.html
@@ -2,6 +2,7 @@
 <html>
 <meta charset="utf-8">
 <head th:include="include :: header"></head>
+<link href="/css/layui.css" rel="stylesheet">
 <body class="gray-bg">
 	<div class="wrapper wrapper-content ">
 		<div class="row">
@@ -9,61 +10,48 @@
 				<div class="ibox float-e-margins">
 					<div class="ibox-content">
 						<form class="form-horizontal m-t" id="signupForm">
-                                                                							                                                                <div class="form-group">	
-								<label class="col-sm-3 control-label">逻辑废除：0（废除），1（正常）：</label>
+							<input type="hidden" name="id" id="id">
+							<input type="hidden" name="fileIds" id="fileIds">
+							<input type="hidden" name="chrggnr" id="chrggnr">
+
+							<div class="form-group">
+								<label class="col-sm-3 control-label">公告名称：</label>
 								<div class="col-sm-8">
-									<input id="fcbz" name="fcbz" class="form-control" type="text">
+									<input id="chrbt" name="chrbt" class="form-control" type="text">
 								</div>
 							</div>
-														                                                                <div class="form-group">	
-								<label class="col-sm-3 control-label">修改新增删除时间：</label>
+
+							<div class="form-group">
+								<label class="col-sm-3 control-label">类型：</label>
 								<div class="col-sm-8">
-									<input id="gxsj" name="gxsj" class="form-control" type="text">
+									<select  name="chrlx" id="chrlx"  class="selectpicker input_width100" placeholder="类型">
+									</select>
 								</div>
 							</div>
-														                                                                <div class="form-group">	
+
+							<div class="form-group">
 								<label class="col-sm-3 control-label">序号：</label>
 								<div class="col-sm-8">
 									<input id="intxh" name="intxh" class="form-control" type="text">
 								</div>
 							</div>
-														                                                                <div class="form-group">	
-								<label class="col-sm-3 control-label">标题：</label>
+
+							<div class="form-group">
+									<div class="col-sm-12"><script name="content" id="myEditor" style="width:100%;height:200px;"></script></div>
+							</div>
+
+							<div class="form-group">
+								<label class="col-sm-3 control-label">
+									<button type="button" class="layui-btn" id="test1" style="width: 100%;">
+										<i class="fa fa-cloud"></i>上传文件
+									</button>
+								</label>
 								<div class="col-sm-8">
-									<input id="chrbt" name="chrbt" class="form-control" type="text">
+									<div id="fileList"></div>
 								</div>
 							</div>
-														                                                                <div class="form-group">	
-								<label class="col-sm-3 control-label">发布时间：</label>
-								<div class="col-sm-8">
-									<input id="dtmfbsj" name="dtmfbsj" class="form-control" type="text">
-								</div>
-							</div>
-														                                                                <div class="form-group">	
-								<label class="col-sm-3 control-label">登记人部门id：</label>
-								<div class="col-sm-8">
-									<input id="intdjrbm" name="intdjrbm" class="form-control" type="text">
-								</div>
-							</div>
-														                                                                <div class="form-group">	
-								<label class="col-sm-3 control-label">登记人id：</label>
-								<div class="col-sm-8">
-									<input id="intdjrid" name="intdjrid" class="form-control" type="text">
-								</div>
-							</div>
-														                                                                <div class="form-group">	
-								<label class="col-sm-3 control-label">登记人名称：</label>
-								<div class="col-sm-8">
-									<input id="chrdjrmc" name="chrdjrmc" class="form-control" type="text">
-								</div>
-							</div>
-														                                                                <div class="form-group">	
-								<label class="col-sm-3 control-label">已查看次数：</label>
-								<div class="col-sm-8">
-									<input id="intyckcs" name="intyckcs" class="form-control" type="text">
-								</div>
-							</div>
-																					<div class="form-group">
+
+							<div class="form-group">
 								<div class="col-sm-8 col-sm-offset-3">
 									<button type="submit" class="btn btn-primary">提交</button>
 								</div>
@@ -75,6 +63,10 @@
 	</div>
 	</div>
 	<div th:include="include::footer"></div>
+	<script src="/js/layui.js"></script>
+	<script type="text/javascript" charset="utf-8" src="/js/plugins/ueditor/ueditor.config.js"></script>
+	<script type="text/javascript" charset="utf-8" src="/js/plugins/ueditor/ueditor.all.min.js"> </script>
+	<script type="text/javascript" charset="utf-8" src="/js/plugins/ueditor/lang/zh-cn/zh-cn.js"></script>
 	<script type="text/javascript" src="/js/appjs/project/gsgg/add.js">
 	</script>
 </body>
