--- a/src/main/resources/templates/project/gsgg/gsgg.html
+++ b/src/main/resources/templates/project/gsgg/gsgg.html
@@ -8,21 +8,30 @@
 			<div class="ibox">
 				<div class="ibox-body">
 					<div class="fixed-table-toolbar">
-						<div class="columns pull-left">
+						<div class="col-xs-10">
+							<div class="form-group col-sm-4">
+								类型：
+								<select  name="chrlx" id="chrlx" class="selectpicker input_width80" placeholder="类型">
+									<option value="">请选择</option>
+								</select>
+							</div>
+
+							<div class="form-group col-sm-4">
+								公告名称：<input class="form-control inline input_width80"   id="chrbt" name="chrbt" placeholder="公告名称" type="text">
+							</div>
+							<div class="form-group col-sm-4">
+
+							</div>
+						</div>
+						<div class="col-xs-2">
+							<button class="btn btn-success" onclick="reLoad()">查询</button>
 							<button shiro:hasPermission="project:gsgg:add" type="button" class="btn  btn-primary" onclick="add()">
 								<i class="fa fa-plus" aria-hidden="true"></i>添加
 							</button>
 							<button shiro:hasPermission="project:gsgg:batchRemove" type="button" class="btn  btn-danger"
-								onclick="batchRemove()">
+									onclick="batchRemove()">
 								<i class="fa fa-trash" aria-hidden="true"></i>删除
 							</button>
-						</div>
-						<div class="columns pull-right">
-							<button class="btn btn-success" onclick="reLoad()">查询</button>
-						</div>
-						<div class="columns pull-right col-md-2 nopadding">
-							<input id="searchName" type="text" class="form-control"
-								placeholder="">
 						</div>
 					</div>
 					<table id="exampleTable" data-mobile-responsive="true">
