--- a/src/main/resources/templates/index_v1.html
+++ b/src/main/resources/templates/index_v1.html
@@ -27,12 +27,7 @@
 			</div>
 			<div class="sidebar-collapse">
 				<ul class="nav" id="side-menu">
-					<li><a href="#"> <i class="fa fa-home"></i> <span
-							class="nav-label">主页</span> <span class="fa arrow"></span></a>
-						<ul class="nav nav-second-level">
-							<li><a id="index001" class="J_menuItem" href="index_v1.html"
-								data-index="0" th:href="@{/main}">关于 IFast</a></li>
-						</ul></li>
+
 					<li th:each="menu : ${menus}"><a href="#"> <i
 							class="fa fa fa-bar-chart-o" th:class="${menu.attributes.icon}"></i>
 							<span class="nav-label" th:text="${menu.text}">基础信息</span> <span
@@ -56,21 +51,14 @@
 
 						<a class="navbar-minimalize minimalize-styl-2 btn btn-default "
 							href="#" title="收起菜单"><i class="fa fa-bars"></i> </a>
-						<form role="search" class="navbar-form-custom" method="post"
-							action="">
-							<div class="form-group">
-								<input type="text" placeholder="请输入您需要查找的内容 …"
-									class="form-control" name="top-search" id="top-search">
-							</div>
-						</form>
 					</div>
 					<ul class="nav navbar-top-links navbar-right">
 						<li class="hidden-xs"><a @click="personal" href="#"><i
 								class="fa fa-id-card"></i> 个人</a></li>
-						<li class="dropdown hidden-xs"><a
+						<!--<li class="dropdown hidden-xs"><a
 							class="right-sidebar-toggle" aria-expanded="false"> <i
 								class="fa fa-tasks"></i> 主题
-						</a></li>
+						</a></li>-->
 					</ul>
 				</nav>
 			</div>
@@ -119,8 +107,8 @@
 					<li class="active"><a data-toggle="tab" href="#tab-1"> <i
 							class="fa fa-gear"></i> 主题
 					</a></li>
-					<li class=""><a data-toggle="tab" href="#tab-2"> 通知 </a></li>
-					<li><a data-toggle="tab" href="#tab-3"> 项目进度 </a></li>
+					<!--<li class=""><a data-toggle="tab" href="#tab-2"> 通知 </a></li>
+					<li><a data-toggle="tab" href="#tab-3"> 项目进度 </a></li>-->
 				</ul>
 				<div class="tab-content">
 					<div id="tab-1" class="tab-pane active">
