--- a/src/main/resources/templates/project/wdb/edit.html
+++ b/src/main/resources/templates/project/wdb/edit.html
@@ -62,6 +62,7 @@
 	</div>
 	<div th:include="include::footer"></div>
 	<script src="/js/layui.js"></script>
+	<script src="/js/common.js"></script>
 	<script type="text/javascript" src="/js/appjs/project/wdb/edit.js">
 	</script>
 </body>
