--- a/src/main/resources/templates/sys/user/personal.html
+++ b/src/main/resources/templates/sys/user/personal.html
@@ -14,7 +14,7 @@
                     <div class="gg-nav">
                         <ul class="nav nav-tabs">
                             <li class="active"><a href="#basic_info" data-toggle="tab">基本资料</a></li>
-                            <li><a href="#photo_info" data-toggle="tab">头像修改</a></li>
+                        <!--    <li><a href="#photo_info" data-toggle="tab">头像修改</a></li>-->
                             <li><a href="#pwd_info" data-toggle="tab">修改密码</a></li>
                         </ul>
                     </div>
