删除ifast相关内容

--- a/src/main/resources/templates/index_v1.html
+++ b/src/main/resources/templates/index_v1.html
@@ -4,9 +4,9 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="renderer" content="webkit">
-<title>IFast 快速开发框架</title>
-<meta name="keywords" content="IFast 快速开发框架">
-<meta name="description" content="IFast 快速开发框架">
+<title>博建施工项目管理系统</title>
+<meta name="keywords" content="博建施工项目管理系统">
+<meta name="description" content="博建施工项目管理系统">
 <!--[if lt IE 9]>
     <meta http-equiv="refresh" content="0;ie.html"/>
     <![endif]-->
@@ -94,9 +94,7 @@
 					src="" th:src="@{/main}" frameborder="0" data-id="index_v1.html"
 					seamless></iframe>
 			</div>
-			<div class="footer">
-				<div class="pull-right">IFast快速开发框架</div>
-			</div>
+
 		</div>
 		<!--右侧部分结束-->
 		<!--右侧边栏开始-->
