--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -2,9 +2,9 @@
 <html lang="zh-CN">
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"></meta>
-        <title>ifast 快速开发框架</title>
-        <meta name="Keywords" content="ifast、快速开发框架、java、ssm、后台管理系统、bootstrap"></meta>
-        <meta name="Description" content="ifast、快速开发框架、java、ssm、后台管理系统、bootstrap"></meta>
+        <title>博建施工项目管理系统</title>
+        <meta name="Keywords" content="博建施工项目管理系统"></meta>
+        <meta name="Description" content="博建施工项目管理系统"></meta>
         <meta name="ctx" th:content="${#httpServletRequest.getContextPath()}"></meta>
         <link href="css/login/base.css" rel="stylesheet"/>
         <link href="css/login/iconfont.css"  rel="stylesheet"/>
@@ -15,7 +15,7 @@
         <div class="wrap">
             <div class="wpn">
                 <div class="form-data pos">
-                    <a href=""><img src="css/login/login-logo.png" class="head-logo"></img></a>
+
                     <div class="change-login">
                         <p class="account_number on">账号登录</p>
                         <!-- <p class="message">短信登录</p> -->
@@ -59,12 +59,7 @@
                         <a href="" class="y">忘记密码</a>
                     </div>
                     <button class="lang-btn off log-btn">登录</button>
-                    <div class="third-party">
-                        <a href="" class="log-qq icon-qq-round"></a>
-                        <a href="" class="log-qq icon-weixin"></a>
-                        <a href="" class="log-qq icon-sina1"></a>
-                    </div>
-                    <p class="right">Powered by ifast © 2018</p>
+
                 </div>
             </div>
         </div>
