--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -13,7 +13,7 @@
 	<div class="panel panel-default">
 		<div class="panel-heading"></div>
 		<div style="padding: 10px 0 20px 20px;">
-		
+		欢迎页
 		</div>
 	</div>
 </body>
