--- a/src/main/resources/templates/project/gsgg/edit.html
+++ b/src/main/resources/templates/project/gsgg/edit.html
@@ -64,8 +64,8 @@
 	</div>
 	</div>
 	<div th:include="include::footer"></div>
-	<script src="/js/common.js"/>
-	<script src="/js/layui.js"></script>
+	<script src="/js/common.js"></script>
+    <script src="/js/layui.js"></script>
     <script type="text/javascript" charset="utf-8" src="/js/plugins/ueditor/ueditor.config.js"></script>
 	<script type="text/javascript" charset="utf-8" src="/js/plugins/ueditor/ueditor.all.min.js"> </script>
 	<script type="text/javascript" charset="utf-8" src="/js/plugins/ueditor/lang/zh-cn/zh-cn.js"></script>
