--- a/src/main/resources/templates/project/wdb/add.html
+++ b/src/main/resources/templates/project/wdb/add.html
@@ -57,8 +57,8 @@
 	</div>
 	</div>
 	<div th:include="include::footer"></div>
-	<script src="/js/common.js"/>
+	<script src="/js/common.js"></script>
 	<script src="/js/layui.js"></script>
-	<script type="text/javascript" src="/js/appjs/project/wdb/add.js"/>
+	<script type="text/javascript" src="/js/appjs/project/wdb/add.js"></script>
 </body>
 </html>
