--- a/app/css/app.css
+++ b/app/css/app.css
@@ -19,7 +19,39 @@
 	font-size: 14px;
 	color: #8f8f94;
 }
-/*博建项目系统独有样式*/
+
+/*
+ * 这是单独为hello mui准备的个性化css，可以覆盖标准mui的css定义；
+ * 博建项目系统独有样式*/
+.bj-header-font{
+	font-size: 14px;
+	color: #000000;
+}
+.bj-title1-font{
+	font-size: 13pt;
+	color: #000000;
+}
+.bj-title2-font{
+	font-size: 12pt;
+	color: #000000;
+	line-height: 130%;
+}
+.bj-p-gray-font{
+	font-size: 11pt;
+	color: #BBBBBB;
+}
+.bj-p-black-font{
+	font-size: 11pt;
+	color: #000000;
+}
+.bj-ul-clear{
+	list-style: none;
+	margin: 0;
+	padding: 0;
+}
+.bj-background-inherit{
+	background-color: inherit;
+}
 .mui-pull-right.bj-header-right{
 	line-height: 44px;
 }
@@ -36,3 +68,5 @@ header.mui-bar.mui-bar-nav{
 .mui-content-padded p{
 	text-indent:2em;
 }
+
+
